<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="app_name_capitalized">REAL ESTATE MANAGER</string>


    // LIST VIEW FRAGMENT
    <string name="list_no_item_title">No estates here</string>
    <string name="list_no_item">Add one by clicking the round button below</string>
    <string name="list_no_result_title">No results found</string>
    <string name="list_no_result">Try with different filters or go back by clicking the List tab below</string>
    <string name="list_address_word">in</string>
    <string name="switch_to_twopane">Do you want to switch to the tablet view?</string>
    <string name="switch_to_normal">Do you want to switch to the normal view?</string>


    // ADD ESTATE FRAGMENT
    <string name="add_estate_title">Add a new estate</string>
    <string name="add_estate_type">Type</string>
    <string name="add_estate_price">Price</string>
    <string name="add_estate_surface">Surface</string>
    <string name="add_estate_rooms">Rooms</string>
    <string name="add_estate_bathrooms">Bathrooms</string>
    <string name="add_estate_bedrooms">Bedrooms</string>
    <string name="add_estate_description">Write a description</string>
    <string name="add_estate_address">Address</string>
    <string name="add_estate_address_city">City</string>
    <string name="add_estate_address_zipcode">Zip code</string>
    <string name="add_estate_date_for_sale">Date of availability</string>
    <string name="add_estate_status">Status</string>
    <string name="add_estate_status_available">Available</string>
    <string name="add_estate_status_sold">Sold</string>
    <string name="add_estate_date_sold">Date it was sold</string>
    <string name="add_estate_agent">Agent</string>
    <string name="add_estate_photo">Add at least one photo</string>
    <string name="add_estate_confirm">Confirm</string>
    <string name="add_estate_cancel">Cancel</string>
    <string name="add_estate_load_photo">ADD A PHOTO :</string>
    <string name="add_estate_no_title">(no title)</string>
    <string name="add_estate_max_photos">You can\'t add more photos</string>
    <string name="add_estate_something_wrong">Something went wrong</string>
    <string name="add_estate_no_pick">You haven\'t picked any photo</string>
    <string name="add_estate_no_photo">At least one photo is required</string>
    <string name="add_estate_missing_field">Missing required field</string>
    <string name="add_estate_near_places">Near places</string>
    <string name="add_estate_added_snack">The estate has been added</string>


    // DETAILS ESTATE FRAGMENT
    <string name="details_description">Description</string>
    <string name="details_rooms">Rooms</string>
    <string name="details_bathrooms">Bathrooms</string>
    <string name="details_bedrooms">Bedrooms</string>
    <string name="details_surface">Surface</string>
    <string name="details_agent">Agent in charge</string>
    <string name="details_unit_surface">m²</string>
    <string name="details_no_location">No location found</string>
    <string name="details_address">Address</string>
    <string name="details_date_available">Available since the</string>
    <string name="details_date_sold">Sold the </string>


    // FILTER ESTATES FRAGMENT
    <string name="filter_title">Filter by</string>
    <string name="filter_price">Price range</string>
    <string name="filter_price_min">$0</string>
    <string name="filter_surface">Surface range</string>
    <string name="filter_surface_min">0 m²</string>
    <string name="filter_surface_unit">m²</string>
    <string name="filter_available">Availability</string>
    <string name="filter_sold">Sold</string>
    <string name="filter_date_after">After</string>
    <string name="filter_date_before">Before</string>
    <string name="filter_date_from">From</string>
    <string name="filter_date_to">To</string>
    <string name="filter_photo">Photo(s)</string>
    <string name="filter_near">Near</string>
    <string name="filter_photo_min">0</string>
    <string name="filter_photo_max">10</string>
    <string name="filter_dollar">$%s</string>
    <string name="filter_no_filter">You haven\'t selected any filter </string>

    // UPDATE ESTATE FRAGMENT
    <string name="update_estate_title">Edit this estate</string>

    // MAP FRAGMENT
    <string name="map_permission_needed">The map needs your location to work</string>

    // SETTINGS FRAGMENT
    <string name="settings_title">Settings</string>
    <string name="settings_currency">Currency</string>
    <string name="settings_pick_currency">Select your currency</string>
    <string name="settings_currency_changed">Currency changed to </string>

    //MORTGAGE CALCULATOR FRAGMENT
    <string name="mortgage_title">Mortgage Calculator</string>
    <string name="mortgage_amount">Amount of loan</string>
    <string name="mortgage_years">Length of loan</string>
    <string name="mortgage_interest">Interest rate</string>
    <string name="mortgage_interest_tv">% per year</string>
    <string name="mortgage_monthly">Per month you repay</string>
    <string name="mortgage_total">In total, you will repay</string>
    <string name="mortgage_year">year(s)</string>

    // CURRENCIES
    <string name="currency_dollar">Dollar</string>
    <string name="currency_euro">Euro</string>

    // POI NEARBY
    <string name="nearby_center">City center</string>
    <string name="nearby_restaurants">Restaurants</string>
    <string name="nearby_station">Metro/train station</string>
    <string name="nearby_supermarket">Supermarket</string>
    <string name="nearby_school">School</string>
    <string name="nearby_cinema">Cinema</string>
    <string name="nearby_pool">Swimming pool</string>
    <string name="nearby_hospital">Hospital</string>
    <string name="nearby_library">Library</string>
    <string name="nearby_park">Park</string>
    <string name="nearby_nightlife">Nightlife street</string>

    // MENU TITLES
    <string name="menu_list">List</string>
    <string name="menu_map">Map</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_update">Update</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_mortgage">Mortgage Calculator</string>
    <string name="menu_settings">Settings</string>


    // IMAGE VIEWS CONTENT DESCRIPTION
    <string name="img_bg">background</string>
    <string name="img_photo">image button photo</string>
    <string name="img_gallery">image button gallery</string>


</resources>
