<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/grey_5"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/spacing_xlarge"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_middle"
            android:text="@string/settings_pick_currency"
            android:textColor="@color/secondaryLightColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/settings_dollar_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_dollar" />

            <RadioButton
                android:id="@+id/settings_euro_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_euro" />

        </RadioGroup>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>