<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="vertical">

        <!--   PRICE RANGE     -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_xlarge"
            android:paddingTop="@dimen/spacing_mlarge"
            android:paddingRight="@dimen/spacing_xlarge"
            android:paddingBottom="@dimen/spacing_mlarge">


            <CheckBox
                android:id="@+id/filter_price_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_90" />


            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/filter_price_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_color="@color/grey_20"
                app:bar_highlight_color="@color/secondaryColor"
                app:data_type="_long"
                app:left_thumb_color="@color/secondaryColor"
                app:left_thumb_color_pressed="@color/secondaryDarkColor"
                app:max_value="500"
                app:min_value="0"
                app:right_thumb_color="@color/secondaryColor"
                app:right_thumb_color_pressed="@color/secondaryDarkColor" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/filter_price_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_price_min"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_60" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/filter_price_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$500"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_60" />
            </LinearLayout>

            <!--     SURFACE RANGE       -->

            <CheckBox
                android:id="@+id/filter_surface_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_surface"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_90" />


            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/filter_surface_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_color="@color/grey_20"
                app:bar_highlight_color="@color/secondaryColor"
                app:data_type="_long"
                app:left_thumb_color="@color/secondaryColor"
                app:left_thumb_color_pressed="@color/secondaryDarkColor"
                app:max_value="500"
                app:min_value="0"
                app:right_thumb_color="@color/secondaryColor"
                app:right_thumb_color_pressed="@color/secondaryDarkColor" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/filter_surface_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_surface_min"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_60" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/filter_surface_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1000 m²"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_60" />
            </LinearLayout>

            <!--     AVAILABLE       -->

            <CheckBox
                android:id="@+id/filter_available_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_available"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_90" />

            <RelativeLayout
                android:id="@+id/filter_available_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/filter_available_from_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/filter_date_from" />

                <EditText
                    android:id="@+id/filter_available_from_et"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/filter_available_from_check"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/border_edittext"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:inputType="none" />

                <CheckBox
                    android:id="@+id/filter_available_to_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/filter_available_from_check"
                    android:layout_marginStart="25dp"
                    android:text="@string/filter_date_to" />

                <EditText
                    android:id="@+id/filter_available_to_et"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/filter_available_to_check"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/default_margin"
                    android:background="@drawable/border_edittext"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:inputType="none" />

            </RelativeLayout>

            <!--     SOLD      -->

            <CheckBox
                android:id="@+id/filter_sold_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_sold"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_90" />

            <RelativeLayout
                android:id="@+id/filter_sold_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/filter_sold_after_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/filter_date_after" />

                <EditText
                    android:id="@+id/filter_sold_after_et"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/filter_sold_after_check"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/border_edittext"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:inputType="none" />

                <CheckBox
                    android:id="@+id/filter_sold_before_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/filter_sold_after_check"
                    android:layout_marginStart="25dp"
                    android:text="@string/filter_date_before" />

                <EditText
                    android:id="@+id/filter_sold_before_et"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/filter_sold_before_check"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/default_margin"
                    android:background="@drawable/border_edittext"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:inputType="none" />

            </RelativeLayout>

            <!--     Near     -->

            <CheckBox
                android:id="@+id/filter_near_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_near"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_90" />

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/filter_near_center"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:background="@drawable/round_btn"
                    android:text="@string/nearby_center"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_60" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/filter_near_restaurants"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:background="@drawable/round_btn"
                    android:text="@string/nearby_restaurants"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_60" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/filter_near_train"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:background="@drawable/round_btn"
                    android:text="@string/nearby_station"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_60" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/filter_near_supermarket"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:background="@drawable/round_btn"
                    android:text="@string/nearby_supermarket"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_60" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/filter_near_school"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:background="@drawable/round_btn"
                    android:text="@string/nearby_school"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_60" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/filter_near_cinema"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:background="@drawable/round_btn"
                    android:text="@string/nearby_cinema"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_60" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/filter_near_pool"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:background="@drawable/round_btn"
                    android:text="@string/nearby_pool"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_60" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/filter_near_hospital"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:background="@drawable/round_btn"
                    android:text="@string/nearby_hospital"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_60" />

            </com.google.android.flexbox.FlexboxLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>